# garmin-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
garmin_mcp/: __init__.py  __main__.py  auth.py  server.py
garmin_mcp/scripts/: __init__.py  auth.py
garmin_mcp/tools/: __init__.py  _utils.py  activities.py  body_composition.py  extras.py  health.py  nutrition.py  profile.py  stats.py  training.py  workout_write.py  workouts.py  write.py
